--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
 </head>
 <body>
     <div class="greetings">
-        <span>H</span>
-        <span>A</span>
+        <span>W</span>
+        <span>E</span>
         <span>L</span>
-        <span>O</span>
-        <span>S</span>
-        <span>A</span>
-        <span>S</span>
-        <span>A</span>
         <span>C</span>
-        <span>A</span>
-        <span>N</span>
-        <span>T</span>
-        <span>I</span>
-        <span>K</span>
+        <span>O</span>
+        <span>M</span>
+        <span>E</span>
     </div>
     <div class="description">
         <span>Aku ada sesuatu buat kamu!!</span>
