--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <span>E</span>
     </div>
     <div class="description">
-        <span>Aku ada sesuatu buat kamu!!</span>
+        <span>Lorem ipsum is placeholder text commonly used in the graphic</span>
     </div>
     <div class="button">
         <button>
             <a href="flower.html">Klik disini</a>
+            
         </button>
         
     </div>
