--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
         <span>E</span>
     </div>
     <div class="description">
-        <span>Lorem ipsum is placeholder text commonly used in the graphic</span>
+        <span>Silahkan gunakan wi - fi dengan baik dan bijak^^</span>
     </div>
-    <div class="button">
-        <button>
-            <a href="flower.html">Klik disini</a>
-            
-        </button>
+    <a href="flower.html "><button class="Login" type="button">Login</button></a>
         
     </div>
 </body>
