--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <title>Login</title>
 </head>
 <body>
+    <form action="flower.html" method="post">
+        <div class="login-form">
+            <form>
+              <h1>Login</h1>
+              <div class="content">
+                <div class="input-field">
+                  <input type="username" placeholder="Username" autocomplete="nope">
+                </div>
+                <div class="input-field">
+                  <input type="password" placeholder="Password" autocomplete="new-password">
+              <div class="action">
+              </div>
+            </form>
+          </div>
+      </form>
     <div class="greetings">
         <span>W</span>
         <span>E</span>
